--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -16,4 +16,8 @@ server {
         try_files $uri /index.html;
     }
 
+     location /user-center/api/ {
+       rewrite ^/user-center/api/(.*)$ /$1 break;
+       proxy_pass  http://123.57.162.28:8081;
+     }
 }
